# cell

./: .gitignore  CMakeLists.txt  README.md  build.sh  index.js  index.wasm  main.cpp  main.js  main.wasm
.github/workflows/: main-pipeline.yml
engine/: Engine.cpp  Engine.h
engine/cell/: Cell.cpp  Cell.h  Status.cpp
